Thu Dec  3 14:22:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (range_to_s): should be infected by the receiver.
	  str2 infects by appending.  [ruby-core:71811] [Bug #11767]

Thu Dec  3 11:57:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: separate SET_CURRENT_THREAD_NAME, which can set
	  the name of current thread only, and SET_ANOTHER_THREAD_NAME,
	  which can set the name of other threads.

	* thread.c (rb_thread_setname): use SET_ANOTHER_THREAD_NAME.  OS X
	  is not possible to set another thread name.

	* thread_pthread.c (native_set_thread_name, thread_timer): use
	  SET_CURRENT_THREAD_NAME.

Wed Dec 02 22:57:46 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h, iseq.h: remove rb_iseq_t::variable_body.
	  Fields in rb_iseq_t::variable_body are contained by
	  rb_iseq_t::body::mark_ary (hidden Array object).

	  Index 0 to 2 of mark_ary are reserved by these objects.

	* iseq.c: catch up this fix.

	* compile.c (rb_iseq_original_iseq): trivial rewrite.

Wed Dec  2 17:19:02 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.h: introduce ISEQ_ORIGINAL_ISEQ() and
	  ISEQ_ORIGINAL_ISEQ_ALLOC() macro.

	* compile.c: use them to access original iseq buffer.

	* iseq.c: ditto.

	* vm_core.h: rename iseq field to support this fix.

Wed Dec  2 17:10:32 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.h: introduce ISEQ_FLIP_CNT_INCREMENT() macro.

	* compile.c (iseq_compile_each): use it.

	* vm_core.h: rename flip_cnt field to support this fix.

Wed Dec  2 17:05:15 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.h: introduce ISEQ_COVERAGE() and ISEQ_COVERAGE_SET() macro.

	* compile.c: use them.

	* iseq.c: ditto.

	* iseq.c (rb_iseq_coverage): added.

	* thread.c (update_coverage): use rb_iseq_coverage().

	* vm_core.h: rename coverage field name to support this fix.

Wed Dec  2 17:00:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_name, rb_enc_name_list_i, rb_enc_aliases_enc_i):