@@ -1,3 +1,9 @@
+Thu Dec  3 15:33:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* sprintf.c (rb_str_format): fix wrong shifting position in
+	  Rational conversion when not at the beginning of the result.
+	  [ruby-core:71806] [Bug #11766]
+
 Thu Dec  3 14:22:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* range.c (range_to_s): should be infected by the receiver.
